# AnimeBot

./: main.py  pyproject.toml
cogs/: AnimeGif.py  Profile.py  RolePlay.py
