[tool.poetry]
name = "repl_python3_Anime-Discord-Bot"
version = "0.1.0"
description = ""
authors = ["ArcticPineapple <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
giphy_client = "^1.0.0"
requests = "^2.26.0"
anime-images-api = "^0.0.6"
Flask = "^2.0.2"
TenGiphPy = "^2.5.0"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
